@@ -1,3 +1,8 @@
+2008-11-10  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/modtypes/autotools.py: ignore errors that could happen when
+	trying to chmod autogen.sh/configure missing its exec bit.
+
 2008-11-09  Frederic Peters  <fpeters@0d.be>
 
 	* modulesets/gnome-2.26.modules: renamed clutter trunk modules to
